force-app/main/default/objects/Preferences__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFL - Adelaide Crows</fullName>
            </value>
            <value>
                <fullName>AFL - Brisbane Lions</fullName>
            </value>
            <value>
                <fullName>AFL - Carlton Blues</fullName>
            </value>
            <value>
                <fullName>AFL - Collingwood Magpies</fullName>
            </value>
            <value>
                <fullName>AFL - Essendon Bombers</fullName>
            </value>
            <value>
                <fullName>AFL - Fremantle Dockers</fullName>
            </value>
            <value>
                <fullName>AFL - Geelong Cats</fullName>
            </value>
            <value>
                <fullName>AFL - Gold Coast Suns</fullName>
            </value>
            <value>
                <fullName>AFL - Greater Western Sydney Giants</fullName>
            </value>
            <value>
                <fullName>AFL - Hawthorn Hawks</fullName>
            </value>
            <value>
                <fullName>AFL - Melbourne Demons</fullName>
            </value>
            <value>
                <fullName>AFL - North Melbourne Kangaroos</fullName>
            </value>
            <value>
                <fullName>AFL - Port Adelaide Power</fullName>
            </value>
            <value>
                <fullName>AFL - Richmond Tigers</fullName>
            </value>
            <value>
                <fullName>AFL - St Kilda Saints</fullName>
            </value>
            <value>
                <fullName>AFL - Sydney Swans</fullName>
            </value>
            <value>
                <fullName>AFL - West Coast Eagles</fullName>
            </value>
            <value>
                <fullName>AFL - Western Bulldogs</fullName>
            </value>
            <value>
                <fullName>A-League - Adelaide United</fullName>
            </value>
            <value>
                <fullName>A-League - Brisbane Roar</fullName>
            </value>
            <value>
                <fullName>A-League - Central Coast Mariners</fullName>
            </value>
            <value>
                <fullName>A-League - Melbourne City</fullName>
            </value>
            <value>
                <fullName>A-League - Melbourne Victory</fullName>
            </value>
            <value>
                <fullName>A-League - Newcastle Jets</fullName>
            </value>
            <value>
                <fullName>A-League - Perth Glory</fullName>
            </value>
            <value>
                <fullName>A-League - Sydney FC</fullName>
            </value>
            <value>
                <fullName>A-League - Wellington Phoenix</fullName>
            </value>
            <value>
                <fullName>A-League - Western Sydney Wanderers</fullName>
            </value>
            <value>
                <fullName>A-League - Western United</fullName>
            </value>
            <value>
                <fullName>Cricket - New South Wales Blues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>