force-app/main/default/objects/Preferences__c/fields/TG_Dominance_Derived__c.field-meta.xml
<CustomField>
    <fullName>TG_Dominance_Derived__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TG Dominance (Derived)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>