force-app/main/default/objects/Preferences__c/fields/Tournament_Interests__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Interests__c</fullName>
    <label>Tournament Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baccarat</fullName>
            </value>
            <value>
                <fullName>Blackjack</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Poker</fullName>
            </value>
            <value>
                <fullName>Pontoon</fullName>
            </value>
            <value>
                <fullName>Roulette</fullName>
            </value>
            <value>
                <fullName>Slot</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
                <isActive>false</isActive>
                <label>NULL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>