force-app/main/default/objects/Preferences__c/fields/Transportation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transportation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>