force-app/main/default/objects/Preferences__c/fields/Transportation_Type__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Type__c</fullName>
    <label>Transportation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any flight</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Business Class Only</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>First Class only</fullName>
            </value>
            <value>
                <fullName>Limo</fullName>
            </value>
            <value>
                <fullName>Private Jet</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
                <isActive>false</isActive>
                <label>NULL</label>
            </value>
            <value>
                <fullName>Private jet del</fullName>
                <isActive>false</isActive>
                <label>Private jet del</label>
            </value>
            <value>
                <fullName>Public transport del</fullName>
                <isActive>false</isActive>
                <label>Public transport del</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>