force-app/main/default/objects/Preferences__c/fields/Vehicle_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Preferences__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Vehicle Preferences</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>