force-app/main/default/objects/Preferences__c/validationRules/Select_Other_Preferred_Dealer.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Other_Preferred_Dealer</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Permission.Skip_Validations_Permission, false, 
AND(

ISBLANK( Preferred_Dealer_Other__c ),
INCLUDES(Preferred_Dealer__c, &apos;Other&apos;)
))</errorConditionFormula>
    <errorDisplayField>Preferred_Dealer_Other__c</errorDisplayField>
    <errorMessage>Please enter &quot;Other&quot; Preferred Dealer.</errorMessage>
</ValidationRule>