force-app/main/default/objects/Preferences__c/validationRules/Specify_Other_Tournament.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Other_Tournament</fullName>
    <active>true</active>
    <description>Specify_Other_Tournament field when &quot;other&quot; is selected for Tournament Interest.</description>
    <errorConditionFormula>AND(
ISBLANK( Other_Tournament__c ),
INCLUDES( Tournament_Interests__c , &apos;Other&apos;),
$Permission.Skip_Validations_Permission = False

)</errorConditionFormula>
    <errorDisplayField>Other_Tournament__c</errorDisplayField>
    <errorMessage>Please specify other Tournament Interest.</errorMessage>
</ValidationRule>